# port_equipment_db

./: README.md  数据库设计总结.md
backend/: README.md  create_database.py  crud.py  database.py  generate_test_data.py  init_db.py  main.py  models.py  port_equipment_db.sql  pyproject.toml  schemas.py  update_database.py
backend/migrations/: add_user_profile_fields.sql  add_user_profile_fields_safe.sql  create_trigger_logs.sql  create_triggers_fixed.sql  create_views.sql  upgrade.sql
web/: NAVBAR_FEATURES.md  QUICK_START.md  index.html  package.json  pnpm-lock.yaml  setup-env.bat
web/config/: vite.config.base.ts  vite.config.dev.ts
web/src/: main.ts
web/src/api/: auth.ts  dashboard.ts  equipment.ts  interceptor.ts  rental.ts  settlement.ts  system.ts  user-center.ts  visualization.ts
web/src/assets/style/: global.less
web/src/components/footer/: index.vue
web/src/components/navbar/: index.vue
web/src/hooks/: permission.ts
web/src/locale/: en-US.ts  zh-CN.ts
web/src/mock/: index.ts
web/src/router/: index.ts
web/src/router/guard/: permission.ts  userLoginInfo.ts
web/src/router/routes/: index.ts
web/src/router/routes/modules/: equipment.ts  rental.ts  settlement.ts  system.ts  visualization.ts
web/src/utils/: auth.ts  image.ts  is.ts
web/src/views/dashboard/workplace/: index.vue  mock.ts
web/src/views/equipment/inbound/: index.vue  mock.ts
web/src/views/equipment/inventory/: index.vue  mock.ts
web/src/views/equipment/outbound/: index.vue  mock.ts
web/src/views/login/: Login.vue  Register.vue
web/src/views/login/locale/: en-US.ts  zh-CN.ts
(+48 files in other folders)
